--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfvars.json
+.terraform.lock.hcl
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Radius generated files
